--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
-  padding: 15px;
+  padding: 15px 15px 5px 15px;
 }
 header > a {
   color: black;
@@ -14,8 +14,79 @@ header > a {
   text-decoration: none;
   padding: 15px;
   border-radius: 5px;
+  transition-duration: 0.4s;
 }
 header > a:hover {
   text-decoration: underline #56da45 5px;
   background-color: rgba(179, 234, 183, 0.625);
+}
+
+.quadrados {
+  background-color: #3ead2f;
+  padding: 15px;
+  text-align: center;
+}
+
+.qualidade,
+.precojusto,
+.atendimento,
+.entregas {
+  background-color: #fff;
+  width: 150px;
+  height: 150px;
+  border: 3px solid black;
+  border-radius: 30px;
+  text-align: center;
+  display: inline-block;
+  margin-right: 15px;
+  padding: 10px 10px 0px 10px;
+}
+
+.conhecamercado {
+  background-color: #3ead2f;
+  text-align: center;
+  padding: 15px;
+}
+
+.comoachar {
+  padding: 15px;
+}
+
+.comoachar h2 {
+  text-align: center;
+}
+
+.gridmap {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
+}
+
+.mapbox {
+  position: relative;
+  height: 500px;
+  width: 600px;
+  background: #fff;
+}
+
+.mapbox iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.informacoesmapa a {
+  text-decoration: none;
+  color: #fff;
+  background-color: #3ead2f;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 15px;
+}
+
+.cadastro {
+  background-color: #3ead2f;
+}
+
+footer {
+  background-color: #3ead2f;
 }
