--- a/style.css
+++ b/style.css
@@ -4,21 +4,36 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
 }
 header {
   padding: 15px 15px 5px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-header > a {
+
+header ul {
+  list-style: none;
+  display: flex;
+}
+
+header img {
+  width: 90px;
+  height: 90px;
+}
+
+header a {
   color: black;
   font-weight: bold;
   text-decoration: none;
   padding: 15px;
-  border-radius: 5px;
-  transition-duration: 0.4s;
+  transition-duration: 0.3s;
 }
-header > a:hover {
-  text-decoration: underline #56da45 5px;
-  background-color: rgba(179, 234, 183, 0.625);
+header a:hover {
+  border-bottom: 4px solid #3ead2f;
 }
 
 .quadrados {
@@ -40,6 +55,22 @@ header > a:hover {
   display: inline-block;
   margin-right: 15px;
   padding: 10px 10px 0px 10px;
+}
+
+.encomendas {
+  padding: 15px;
+  text-align: center;
+}
+
+.encomendas a {
+  color: #3ead2f;
+  margin: auto;
+  text-decoration: none;
+  padding: 15px;
+  border: 1px solid black;
+  border-radius: 5px;
+  display: block;
+  width: 100px;
 }
 
 .conhecamercado {
