--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  width: 100vw;
   height: 100vh;
   box-sizing: border-box;
 }
@@ -13,6 +12,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 header ul {
