--- a/historia.css
+++ b/historia.css
@@ -10,10 +10,12 @@ article {
 
 p {
   text-align: justify;
+  font-size: 20pt;
 }
 
 h1 {
   text-align: center;
+  font-size: 35pt;
 }
 
 article img {
