--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter";
   height: 100vh;
   box-sizing: border-box;
 }
@@ -28,6 +28,7 @@ header img {
 header a {
   color: black;
   font-weight: bold;
+  font-size: 20pt;
   text-decoration: none;
   padding: 15px;
   transition-duration: 0.3s;
@@ -40,6 +41,7 @@ header a:hover {
   background-color: #3ead2f;
   padding: 15px;
   text-align: center;
+  font-size: 13pt;
 }
 
 .qualidade,
@@ -49,12 +51,15 @@ header a:hover {
   background-color: #fff;
   width: 150px;
   height: 150px;
-  border: 3px solid black;
+  border: 0.5px solid black;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   text-align: center;
   display: inline-block;
   margin-right: 15px;
   padding: 10px 10px 0px 10px;
+  position: relative;
+  top: -50px;
 }
 
 .encomendas {
