--- a/style/footer.css
+++ b/style/footer.css
@@ -7,34 +7,79 @@
 
 footer {
   background-color: #3ead2f;
-  padding: 20px;
+  padding: 30px 15px;
+  text-align: center;
+  color: white;
 }
 
 .iconmercado img {
-  margin: auto;
   display: block;
+  margin: 0 auto;
+  max-width: 150px;
 }
 
 .iconsfooter {
-  text-align: center;
-  margin: 50px 0px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 40px 0;
 }
 
-.iconsfooter img:not(:last-child) {
-  margin-right: 250px;
+.iconsfooter img {
+  max-width: 50px;
+  height: auto;
 }
 
 .descricaofooter {
   display: flex;
   justify-content: center;
-  color: white;
+  gap: 50px;
+  flex-wrap: wrap;
+  text-align: left;
+  max-width: 1200px;
+  margin: auto;
 }
 
-.descricaofooter div:not(:last-child) {
-  margin-right: 50px;
+.descricaofooter div {
+  flex: 1;
+  min-width: 250px;
+}
+
+.contato p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.contato img {
+  width: 20px;
+  height: 20px;
 }
 
 .descricaofooter a {
   text-decoration: none;
   color: white;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.descricaofooter a:hover {
+  color: #d9ffb3;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .iconsfooter {
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+
+  .descricaofooter {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contato p {
+    justify-content: center;
+  }
 }
