--- a/style/historia.css
+++ b/style/historia.css
@@ -10,12 +10,12 @@ article {
 
 main p {
   text-align: justify;
-  font-size: 20pt;
+  font-size: 20px;
 }
 
 main h1 {
   text-align: center;
-  font-size: 35pt;
+  font-size: 30pt;
 }
 
 article img {
