--- a/style/index.css
+++ b/style/index.css
@@ -493,6 +493,77 @@ p {
 
 /* Fim localização no mapa */
 
+/* Inicio Cadastro */
+/* Estilos do Cadastro */
 .cadastro {
   background-color: #3ead2f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
 }
+
+.cadastro h2 {
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.cadastro p {
+  color: white;
+  text-align: center;
+  font-size: 17px;
+}
+
+.cadastro form {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 15px;
+  background-color: #3ead2f;
+  width: 100%;
+  max-width: 500px;
+}
+
+.cadastro label {
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+}
+
+.cadastro input {
+  width: 100%;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.tel-cpf {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+
+.cadastro input[type="submit"] {
+  background-color: white;
+  color: #3ead2f;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 10px 30px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  transition: 0.3s;
+  width: 100%;
+}
+
+.cadastro input[type="submit"]:hover {
+  background-color: #2c7c22;
+  color: white;
+}
+/* Fim Cadastro */
