--- a/style/footer.css
+++ b/style/footer.css
@@ -6,7 +6,7 @@
 }
 
 footer {
-  background-color: #3ead2f;
+  background-image: linear-gradient(180deg, #3ead2f, #56da45);
   padding: 30px 15px;
   text-align: center;
   color: white;
