--- a/style/header.css
+++ b/style/header.css
@@ -5,6 +5,10 @@
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
+header h1 {
+  font-weight: normal;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -13,6 +17,12 @@ header {
   padding: 10px 30px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+header > div {
+  display: flex;
+  align-items: center;
+  gap: 35px;
 }
 
 header img {
