--- a/style/footer.css
+++ b/style/footer.css
@@ -25,9 +25,10 @@ footer {
   margin: 40px 0;
 }
 
-.iconsfooter img {
-  max-width: 50px;
-  height: auto;
+.iconsfooter i {
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
 }
 
 .descricaofooter {
@@ -49,11 +50,6 @@ footer {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.contato img {
-  width: 20px;
-  height: 20px;
 }
 
 .descricaofooter a {
