--- a/style/contato.css
+++ b/style/contato.css
@@ -38,6 +38,10 @@ main > h1 {
   transition: color 0.3s ease;
 }
 
+.texto-contato a:hover {
+  color: #d9ffb3;
+}
+
 .texto-contato p i {
   vertical-align: middle;
   margin-right: 6px;
@@ -142,7 +146,7 @@ main > h1 {
 }
 
 .bloco-pedido a:hover {
-  background-color: #3ead2f;
+  background-color: #2c7c22;
   color: white;
 }
 
