--- a/style/header.css
+++ b/style/header.css
@@ -7,19 +7,22 @@
 
 header h1 {
   font-weight: normal;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
-header {
+header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #fff;
   padding: 10px 30px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  height: 12vh;
 }
 
-header > div {
+header .imagem-texto {
   display: flex;
   align-items: center;
   gap: 35px;
@@ -30,7 +33,7 @@ header img {
   height: auto;
 }
 
-header nav ul {
+.nav-list {
   list-style: none;
   display: flex;
   gap: 25px;
@@ -38,8 +41,8 @@ header nav ul {
   margin: 0;
 }
 
-header nav ul li {
-  display: inline;
+.nav-list li {
+  letter-spacing: 1px;
 }
 
 header a {
@@ -55,4 +58,69 @@ header a {
 header a:hover {
   color: #3ead2f;
   border-bottom: 3px solid #3ead2f;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: black;
+  margin: 8px;
+  transition: 0.3s;
+}
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 12vh;
+    right: 0;
+    width: 50vw;
+    height: 88vh;
+    background-color: #fff;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .nav-list li {
+    opacity: 0;
+  }
+
+  .mobile-menu {
+    display: block;
+  }
+
+  .nav-list.active {
+    transform: translateX(0);
+  }
+
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+}
+
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-8px, 8px);
+}
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-8px, 8px);
 }
