--- a/style/trabalheconosco.css
+++ b/style/trabalheconosco.css
@@ -59,7 +59,7 @@ input[type="reset"] {
   transition: 0.3s;
 }
 
-form input[type="submit"]:hover {
+form input[type="submit"]:hover, input[type="reset"]:hover {
   background-color: #2c7c22;
   color: white;
 }
