--- a/style/header.css
+++ b/style/header.css
@@ -55,7 +55,11 @@ header a {
   transition: all 0.3s ease;
 }
 
-header a:hover {
+header .icontext {
+  padding: 0;
+}
+
+header a:hover:not(.icontext) {
   color: #3ead2f;
   border-bottom: 3px solid #3ead2f;
 }
@@ -78,6 +82,10 @@ header a:hover {
     overflow-x: hidden;
   }
 
+  .travar_scroll {
+    overflow: hidden;
+  }
+
   .nav-list {
     position: absolute;
     top: 12vh;
@@ -85,11 +93,15 @@ header a:hover {
     width: 50vw;
     height: 88vh;
     background-color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
+    z-index: 999;
   }
   .nav-list li {
     opacity: 0;
@@ -122,5 +134,5 @@ header a:hover {
   opacity: 0;
 }
 .mobile-menu.active .line3 {
-  transform: rotate(45deg) translate(-8px, 8px);
+  transform: rotate(45deg) translate(-5px, -7px);
 }
