--- a/style/trabalheconosco.css
+++ b/style/trabalheconosco.css
@@ -59,7 +59,18 @@ input[type="reset"] {
   transition: 0.3s;
 }
 
-form input[type="submit"]:hover, input[type="reset"]:hover {
+form input[type="submit"]:hover,
+input[type="reset"]:hover {
   background-color: #2c7c22;
   color: white;
+}
+
+@media (max-width: 730px) {
+  form
+    input:not(input[type="file"], input[type="submit"], input[type="reset"]) {
+    width: 350px;
+  }
+  form select {
+    font-size: 14px;
+  }
 }
