--- a/style/header.css
+++ b/style/header.css
@@ -5,11 +5,27 @@
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
+header{
+  position: fixed;
+  width: 100%;
+  height: 110px;
+  z-index: 10;
+}
+
+main{
+  padding-top: 110px;
+}
+
 header h1 {
   font-weight: normal;
   font-size: 24px;
   text-transform: uppercase;
   letter-spacing: 4px;
+}
+
+.active{
+  color: #3ead2f;
+  border-bottom: 3px solid #3ead2f
 }
 
 header nav {
@@ -126,6 +142,14 @@ header a:hover:not(.icontext) {
     }
   }
 }
+
+@media (max-width: 1300px) {
+  .imagem-texto a h1{
+    display: none;
+  }
+}
+
+
 
 .mobile-menu.active .line1 {
   transform: rotate(-45deg) translate(-8px, 8px);
