--- a/style/index.css
+++ b/style/index.css
@@ -253,11 +253,11 @@ body {
   .quadrado {
     position: static;
     margin: auto;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
   }
   .quadrado i {
-    font-size: 100px;
+    font-size: 70px;
   }
   .slider {
     margin-bottom: 20px;
@@ -460,7 +460,7 @@ p {
 /* Celulares (480px) */
 @media (max-width: 480px) {
   .fundo_ofertas {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     height: auto;
     padding: 20px 10px;
@@ -469,7 +469,7 @@ p {
   .fundo_ofertas img {
     height: 120px;
     width: 100px;
-    margin: 10px 0;
+    margin: 10px 20px;
   }
 
   .ofertasdia h2 {
