--- a/style/header.css
+++ b/style/header.css
@@ -5,14 +5,14 @@
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
-header{
+header {
   position: fixed;
   width: 100%;
   height: 110px;
   z-index: 10;
 }
 
-main{
+main {
   padding-top: 110px;
 }
 
@@ -23,9 +23,9 @@ header h1 {
   letter-spacing: 4px;
 }
 
-.active{
+.active {
   color: #3ead2f;
-  border-bottom: 3px solid #3ead2f
+  border-bottom: 3px solid #3ead2f;
 }
 
 header nav {
@@ -107,7 +107,7 @@ header a:hover:not(.icontext) {
     top: 12vh;
     right: 0;
     width: 50vw;
-    height: 82vh;
+    height: 88vh;
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
@@ -144,12 +144,10 @@ header a:hover:not(.icontext) {
 }
 
 @media (max-width: 1300px) {
-  .imagem-texto a h1{
+  .imagem-texto a h1 {
     display: none;
   }
 }
-
-
 
 .mobile-menu.active .line1 {
   transform: rotate(-45deg) translate(-8px, 8px);
